More dynamic DI